Backend: Refactor io package